# alexandrescu_advice

./: CMakeLists.txt  CMakePresets.json  Jenkinsfile  README.md  clean.bat  generate.bat  launch.bat  setup_env.bat  test.bat
app/: CMakeLists.txt
app/resourses/: mission01.txt  mission03.txt
app/src/: Map.h  MapReader.h  main.cpp  pathFinder.h  vt100.h
core/: CMakeLists.txt
core/app/: CMakeLists.txt
core/app/resourses/: mission02.txt
core/app/src/: MapReader.h  main.cpp  resourcePath.h.in  vt100.h
core/asm_sort/: CMakeLists.txt  bubble_sort_linux_nasm.asm  bubble_sort_win_masm.asm  quick_sort_linux_nasm.asm  quick_sort_win_masm.asm
core/asm_sort/include/asm_sort/: bubble_sort.h  quick_sort.h
core/asm_sort_test/: CMakeLists.txt  test_bubble_sort.cpp  test_quick_asm_sort.cpp
core/c_sort/: CMakeLists.txt  bubble_sort.cpp  insertion_sort.cpp  quick_sort.cpp  selection_sort.cpp
core/c_sort/include/c_sort/: bubble_sort.h  insertion_sort.h  quick_sort.h  selection_sort.h
core/c_sort_test/: CMakeLists.txt  bubble_test.cpp  insertion_test.cpp  qsort_test.cpp  selection_test.cpp
core/job_runner/: CMakeLists.txt  jobs.cpp  jobs.hpp  main.cpp
core/rnum_generator/: CMakeLists.txt  generator.cpp
core/rnum_generator/include/rnum_generator/: generator.h
core/sort_alexandrescu/: CMakeLists.txt  sorter.cpp
core/sort_alexandrescu/include/: sorter.h
core/sort_alexandrescu_test/: CMakeLists.txt  sort_test.cpp
core/speed_tester/: CMakeLists.txt  main.cpp  sort_jobs.cpp  sort_jobs.hpp  vt100.hpp
core/utils/: CMakeLists.txt
core/utils/include/: rnum_generator.hpp
core/vt100/: CMakeLists.txt  vt100.cpp
core/vt100/include/: vt100.h
jenkins/: Dockerfile  build_jenkins_image.sh  notes.md  run_controller.sh  run_dind.sh
jenkins/images/: Dockerfile  run.sh
jenkins/images/agent_arm64/: Dockerfile  build_agent.sh
jenkins/images/jenkins_controller/: Dockerfile  build_jenkins_controller.sh
jenkins/linux/arm/: Jenkinsfile
jenkins/linux/x86/: Jenkinsfile
linux/: build.sh  clean.sh  compile.sh  generate.sh  set_env.sh  test.sh
win/: clean.bat  compile.bat  generate.bat  open.bat  setup_env.bat  test.bat
